# classroom_assistant

./: .gitignore  setup.py
classroom_engagement/: README.md  pyproject.toml
classroom_engagement/scripts/: run_emotion_demo.py
classroom_engagement/src/classroom_engagement.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
classroom_engagement/src/emotion_detector/: analyzer.py  config.py  model.py  visualizer.py
classroom_engagement/src/face_detector/: retinaface_insight.py
classroom_engagement/src/fusion/: engagement.py
classroom_engagement/src/gaze_estimator/: facemesh.py  gazelle.py
classroom_engagement/src/posture_estimator/: blazepose.py  detector.py
classroom_engagement/src/tracking/: iou_tracker.py
